# VideoForge

./: .gitignore  Cargo.toml  Package.resolved  Package.swift  README.md  index.html  main.py  package-lock.json  package.json  requirements.txt
Distribution/: README.md
Sources/MLXWhisper/: WhisperAudio.swift  WhisperGenerator.swift  WhisperModel.swift  WhisperResult.swift
Sources/VideoEdit/: App.swift  AudioService.swift  ContentView.swift  DependencyService.swift  EnvLoader.swift  GrammarService.swift  PipelineService.swift  SettingsView.swift  SetupView.swift  TeleprompterService.swift  TranscriptionService.swift
Sources/VideoEditCore/: BoundaryScore.swift  CorrectionCache.swift  DualLanguageService.swift  MergeService.swift  MusicDuckingService.swift  NoiseRemovalService.swift  OverlayService.swift  PortraitBoxService.swift  ProfileDetector.swift  SRTExporter.swift  Segment.swift  SilenceRemovalService.swift  TextNormalizer.swift  VideoProfile.swift
Tests/VideoEditCoreTests/: BoundaryScoreTests.swift  CorrectionCacheTests.swift  MergeServiceTests.swift  ProfileDetectorTests.swift  SRTExporterTests.swift  TextNormalizerTests.swift
core/: audio.py  boundary_score.py  cache.py  config.py  grammar.py  merge.py  profiles.py  srt.py  text_normalize.py  transcribe.py
resources/: transcribe_audio.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/services/: audio.rs  audio_clean.rs  dependency.rs  env.rs  grammar.rs  mod.rs  pipeline.rs  transcription.rs  video.rs
(+16 files in other folders)
