[package]
name = "videoforge"
version = "0.1.0"
description = "VideoForge - AI Video Workstation"
authors = ["Swallow74"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
videoforge-core = { path = "../crates/videoforge-core" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
